updated swagger config, added orval for client side type generation
