# docs/swagger.json
@@ -1,8 +1,22 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This a documentation for the Midgard API.",
+        "title": "Midgard API Documentation",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "0.0.1"
     },
+    "host": "localhost:8081",
+    "basePath": "/",
     "paths": {
         "/cats/{id}": {
             "get": {
@@ -13,12 +27,14 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Show Cat",
-                "operationId": "get-string-by-string",
+                "tags": [
+                    "cats"
+                ],
+                "summary": "Show a Cat",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "cat ID",
+                        "description": "Cat ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -30,6 +46,18 @@
                         "schema": {
                             "$ref": "#/definitions/models.Cat"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
                     }
                 }
             }
@@ -56,5 +84,9 @@
                 }
             }
         }
+    },
+    "externalDocs": {
+        "description": "OpenAPI",
+        "url": "https://swagger.io/resources/open-api/"
     }
 }
